--- a/src/main/resources/com/liferay/vtl/adt_asset_tag_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_asset_tag_70.vm
@@ -4,3 +4,10 @@
 #* @vtlvariable name="assetTagService" type="com.liferay.asset.kernel.service.AssetTagService" *#
 #* @vtlvariable name="assetTagStatsLocalService" type="com.liferay.asset.kernel.service.AssetTagStatsLocalService" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="class_name_id" type="java.lang.Long" *#
+#* @vtlvariable name="randomNamespace" type="java.lang.String" *#
+#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
+#* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="maxAssetTags" type="java.lang.String" *#
+#* @vtlvariable name="showAssetCount" type="java.lang.String" *#
+#* @vtlvariable name="showZeroAssetCount" type="java.lang.String" *#
