--- a/src/main/resources/com/liferay/vtl/adt_blogs_entry_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_blogs_entry_70.vm
@@ -3,3 +3,6 @@
 #* @vtlvariable name="blogsEntryLocalService" type="com.liferay.blogs.kernel.service.BlogsEntryLocalService" *#
 #* @vtlvariable name="blogsEntryService" type="com.liferay.blogs.kernel.service.BlogsEntryService" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="blogsPortletInstanceConfiguration" type="com.liferay.blogs.web.internal.configuration.BlogsPortletInstanceConfiguration" *#
+#* @vtlvariable name="blogsPortletInstanceSettingsHelper" type="com.liferay.blogs.web.internal.display.context.BlogsPortletInstanceSettingsHelper" *#
+#* @vtlvariable name="class_name_id" type="java.lang.Long" *#
