--- a/src/main/resources/com/liferay/vtl/adt_document_library_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_document_library_70.vm
@@ -6,3 +6,10 @@
 #* @vtlvariable name="dlFileEntryTypeService" type="com.liferay.document.library.kernel.service.DLFileEntryTypeService" *#
 #* @vtlvariable name="dlUtil" type="com.liferay.document.library.kernel.util.DLUtil" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="class_name_id" type="java.lang.Long" *#
+#* @vtlvariable name="mimeTypes" type="java.lang.String" *#
+#* @vtlvariable name="randomNamespace" type="java.lang.String" *#
+#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
+#* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="rootFolderId" type="java.lang.String" *#
+#* @vtlvariable name="dlPortletInstanceSettings" type="com.liferay.document.library.web.internal.settings.DLPortletInstanceSettings" *#
