--- a/src/main/resources/com/liferay/vtl/adt_language_entry_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_language_entry_70.vm
@@ -1,3 +1,13 @@
 #* @vtlvariable name="serviceLocator" type="com.liferay.portal.template.ServiceLocator" *#
 #* @vtlvariable name="entries" type="java.util.List<com.liferay.portal.kernel.servlet.taglib.ui.LanguageEntry>" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="class_name_id" type="java.lang.Long" *#
+#* @vtlvariable name="displayCurrentLocale" type="java.lang.String" *#
+#* @vtlvariable name="randomNamespace" type="java.lang.String" *#
+#* @vtlvariable name="formName" type="java.lang.String" *#
+#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
+#* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="languageIds" type="java.lang.String" *#
+#* @vtlvariable name="name" type="java.lang.String" *#
+#* @vtlvariable name="formAction" type="java.lang.String" *#
+#* @vtlvariable name="namespace" type="java.lang.String" *#
