--- a/src/main/resources/com/liferay/vtl/adt_site_map_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_site_map_70.vm
@@ -2,3 +2,13 @@
 #* @vtlvariable name="entries" type="java.util.List<com.liferay.portal.kernel.model.Layout>" *#
 #* @vtlvariable name="siteMapDisplayContext" type="com.liferay.site.navigation.site.map.web.internal.display.context.SiteNavigationSiteMapDisplayContext" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="class_name_id" type="java.lang.Long" *#
+#* @vtlvariable name="showCurrentPage" type="java.lang.String" *#
+#* @vtlvariable name="randomNamespace" type="java.lang.String" *#
+#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
+#* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="includeRootInTree" type="java.lang.String" *#
+#* @vtlvariable name="showHiddenPages" type="java.lang.String" *#
+#* @vtlvariable name="displayDepth" type="java.lang.String" *#
+#* @vtlvariable name="rootLayoutUuid" type="java.lang.String" *#
+#* @vtlvariable name="useHtmlTitle" type="java.lang.String" *#
