--- a/src/main/resources/com/liferay/vtl/adt_site_navigation_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_site_navigation_70.vm
@@ -6,3 +6,10 @@
 #* @vtlvariable name="rootLayoutLevel" type="java.lang.Integer" *#
 #* @vtlvariable name="rootLayoutType" type="java.lang.String" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="class_name_id" type="java.lang.Long" *#
+#* @vtlvariable name="randomNamespace" type="java.lang.String" *#
+#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
+#* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="preview" type="java.lang.Boolean" *#
+#* @vtlvariable name="displayDepth" type="java.lang.Long" *#
+#* @vtlvariable name="rootLayoutUuid" type="java.lang.String" *#
