--- a/src/main/resources/com/liferay/vtl/adt_wiki_page_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_wiki_page_70.vm
@@ -6,4 +6,10 @@
 #* @vtlvariable name="wikiPageService" type="com.liferay.wiki.service.WikiPageService" *#
 #* @vtlvariable name="wikiNodeLocalService" type="com.liferay.wiki.service.WikiNodeLocalService" *#
 #* @vtlvariable name="wikiNodeService" type="com.liferay.wiki.service.WikiNodeService" *#
+#* @vtlvariable name="wikiPortletInstanceOverriddenConfiguration" type="com.liferay.wiki.web.configuration.WikiPortletInstanceConfigurationOverride" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="class_name_id" type="java.lang.Long" *#
+#* @vtlvariable name="randomNamespace" type="java.lang.String" *#
+#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
+#* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="visibleNodes" type="java.lang.String" *#
