currentURL is not available in journal template

--- a/src/main/resources/com/liferay/vtl/adt_asset_category_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_asset_category_70.vm
@@ -12,3 +12,4 @@
 #* @vtlvariable name="assetVocabularyIds" type="java.lang.String" *#
 #* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
 #* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
