--- a/src/main/resources/com/liferay/vtl/adt_asset_tag_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_asset_tag_70.vm
@@ -11,3 +11,4 @@
 #* @vtlvariable name="maxAssetTags" type="java.lang.String" *#
 #* @vtlvariable name="showAssetCount" type="java.lang.String" *#
 #* @vtlvariable name="showZeroAssetCount" type="java.lang.String" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
