--- a/src/main/resources/com/liferay/vtl/adt_bread_crumb_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_bread_crumb_70.vm
@@ -10,3 +10,4 @@
 #* @vtlvariable name="displayStyle" type="java.lang.String" *#
 #* @vtlvariable name="showCurrentGroup" type="java.lang.String" *#
 #* @vtlvariable name="showParentGroups" type="java.lang.String" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
