--- a/src/main/resources/com/liferay/vtl/adt_language_entry_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_language_entry_70.vm
@@ -11,3 +11,4 @@
 #* @vtlvariable name="name" type="java.lang.String" *#
 #* @vtlvariable name="formAction" type="java.lang.String" *#
 #* @vtlvariable name="namespace" type="java.lang.String" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
