--- a/src/main/resources/com/liferay/vtl/adt_rss_feed_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_rss_feed_70.vm
@@ -16,3 +16,4 @@
 #* @vtlvariable name="showFeedTitle" type="java.lang.String" *#
 #* @vtlvariable name="showFeedItemAuthor" type="java.lang.String" *#
 #* @vtlvariable name="showFeedPublishedDate" type="java.lang.String" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
