--- a/src/main/resources/com/liferay/vtl/adt_wiki_page_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_wiki_page_70.vm
@@ -13,3 +13,4 @@
 #* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
 #* @vtlvariable name="displayStyle" type="java.lang.String" *#
 #* @vtlvariable name="visibleNodes" type="java.lang.String" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
