--- a/src/main/resources/com/liferay/vtl/theme_template_70.vm
+++ b/src/main/resources/com/liferay/vtl/theme_template_70.vm
@@ -117,3 +117,4 @@
 #* @vtlvariable name="date" type="com.liferay.portal.kernel.util.DateUtil_IW" *#
 #* @vtlvariable name="current_time" type="java.util.Date" *#
 #* @vtlvariable name="the_year" type="java.lang.String" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
