--- a/src/main/resources/com/liferay/vtl/layout_template_62_70.vm
+++ b/src/main/resources/com/liferay/vtl/layout_template_62_70.vm
@@ -1,3 +1,4 @@
 #* @vtlvariable name="processor" type="com.liferay.portal.layoutconfiguration.util.velocity.ColumnProcessor" *#
 #* @vtlvariable name="taglibLiferay" type="com.liferay.taglib.util.VelocityTaglib" *#
 #* @vtlvariable name="theme" type="com.liferay.taglib.util.VelocityTaglib" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
