Class Name completion for objectUtil in Freemarker templates, cleanup for Freemarker variables, sort alphabetically

--- a/src/main/resources/com/liferay/vtl/adt_asset_entry_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_asset_entry_70.vm
@@ -1,69 +1,73 @@
-#* @vtlvariable name="assetPublisherHelper" type="com.liferay.asset.publisher.web.util.AssetPublisherHelper" *#
-#* @vtlvariable name="entries" type="java.util.List<com.liferay.asset.kernel.model.AssetEntry>" *#
-#* @vtlvariable name="entry" type="com.liferay.asset.kernel.model.AssetEntry" *#
-#* @vtlvariable name="assetEntryLocalService" type="com.liferay.asset.kernel.service.AssetEntryLocalService" *#
-#* @vtlvariable name="assetEntryService" type="com.liferay.asset.kernel.service.AssetEntryService" *#
-#* @vtlvariable name="assetVocabularyLocalService" type="com.liferay.asset.kernel.service.AssetVocabularyLocalService" *#
-#* @vtlvariable name="assetVocabularyService" type="com.liferay.asset.kernel.service.AssetVocabularyService" *#
+#* @vtlvariable name="abstractLength" type="java.lang.String" *#
+#* @vtlvariable name="anyAssetType" type="java.lang.String" *#
+#* @vtlvariable name="anyClassTypeJournalArticleAssetRendererFactory" type="java.lang.String" *#
+#* @vtlvariable name="anyClassTypeDLFileEntryAssetRendererFactory" type="java.lang.String" *#
 #* @vtlvariable name="assetCategoryLocalService" type="com.liferay.asset.kernel.service.AssetCategoryLocalService" *#
 #* @vtlvariable name="assetCategoryService" type="com.liferay.asset.kernel.service.AssetCategoryService" *#
+#* @vtlvariable name="assetEntryLocalService" type="com.liferay.asset.kernel.service.AssetEntryLocalService" *#
+#* @vtlvariable name="assetEntryService" type="com.liferay.asset.kernel.service.AssetEntryService" *#
+#* @vtlvariable name="assetEntryXml" type="java.lang.String" *#
+#* @vtlvariable name="assetLinkBehavior" type="java.lang.String" *#
+#* @vtlvariable name="assetPublisherHelper" type="com.liferay.asset.publisher.web.util.AssetPublisherHelper" *#
 #* @vtlvariable name="assetTagLocalService" type="com.liferay.asset.kernel.service.AssetTagLocalService" *#
 #* @vtlvariable name="assetTagService" type="com.liferay.asset.kernel.service.AssetTagService" *#
 #* @vtlvariable name="assetTagStatsLocalService" type="com.liferay.asset.kernel.service.AssetTagStatsLocalService" *#
-#* @vtlvariable name="template_id" type="java.lang.Long" *#
-#* @vtlvariable name="enableRelatedAssets" type="java.lang.String" *#
-#* @vtlvariable name="enableViewCountIncrement" type="java.lang.String" *#
-#* @vtlvariable name="delta" type="java.lang.String" *#
-#* @vtlvariable name="enablePermissions" type="java.lang.String" *#
-#* @vtlvariable name="classTypeIdsJournalArticleAssetRendererFactory" type="java.lang.String" *#
-#* @vtlvariable name="rssDisplayStyle" type="java.lang.String" *#
-#* @vtlvariable name="queryName0" type="java.lang.String" *#
-#* @vtlvariable name="enableRatings" type="java.lang.String" *#
-#* @vtlvariable name="orderByColumn2" type="java.lang.String" *#
-#* @vtlvariable name="orderByColumn1" type="java.lang.String" *#
-#* @vtlvariable name="randomNamespace" type="java.lang.String" *#
-#* @vtlvariable name="subtypeFieldsFilterEnabledDLFileEntryAssetRendererFactory" type="java.lang.String" *#
-#* @vtlvariable name="ddmStructureFieldName" type="java.lang.String" *#
-#* @vtlvariable name="showOnlyLayoutAssets" type="java.lang.String" *#
-#* @vtlvariable name="queryContains0" type="java.lang.String" *#
-#* @vtlvariable name="classNameIds" type="java.lang.String" *#
-#* @vtlvariable name="queryAndOperator0" type="java.lang.String" *#
-#* @vtlvariable name="emailAssetEntryAddedEnabled" type="java.lang.String" *#
-#* @vtlvariable name="rssDelta" type="java.lang.String" *#
-#* @vtlvariable name="metadataFields" type="java.lang.String" *#
-#* @vtlvariable name="customUserAttributes" type="java.lang.String" *#
-#* @vtlvariable name="showContextLink" type="java.lang.String" *#
-#* @vtlvariable name="socialBookmarksDisplayPosition" type="java.lang.String" *#
-#* @vtlvariable name="orderByType1" type="java.lang.String" *#
-#* @vtlvariable name="showAssetTitle" type="java.lang.String" *#
-#* @vtlvariable name="orderByType2" type="java.lang.String" *#
 #* @vtlvariable name="assetVocabularyId" type="java.lang.String" *#
-#* @vtlvariable name="subtypeFieldsFilterEnabled" type="java.lang.String" *#
-#* @vtlvariable name="showAvailableLocales" type="java.lang.String" *#
-#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
-#* @vtlvariable name="assetLinkBehavior" type="java.lang.String" *#
-#* @vtlvariable name="displayStyle" type="java.lang.String" *#
-#* @vtlvariable name="enableRss" type="java.lang.String" *#
-#* @vtlvariable name="rssFeedType" type="java.lang.String" *#
-#* @vtlvariable name="anyAssetType" type="java.lang.String" *#
-#* @vtlvariable name="subtypeFieldsFilterEnabledJournalArticleAssetRendererFactory" type="java.lang.String" *#
-#* @vtlvariable name="emailFromName" type="java.lang.String" *#
-#* @vtlvariable name="abstractLength" type="java.lang.String" *#
-#* @vtlvariable name="showMetadataDescriptions" type="java.lang.String" *#
-#* @vtlvariable name="enableFlags" type="java.lang.String" *#
+#* @vtlvariable name="assetVocabularyLocalService" type="com.liferay.asset.kernel.service.AssetVocabularyLocalService" *#
+#* @vtlvariable name="assetVocabularyService" type="com.liferay.asset.kernel.service.AssetVocabularyService" *#
+#* @vtlvariable name="classTypeIdsJournalArticleAssetRendererFactory" type="java.lang.String" *#
 #* @vtlvariable name="class_name_id" type="java.lang.Long" *#
-#* @vtlvariable name="showAddContentButton" type="java.lang.String" *#
-#* @vtlvariable name="rssName" type="java.lang.String" *#
-#* @vtlvariable name="showExtraInfo" type="java.lang.String" *#
-#* @vtlvariable name="enableSocialBookmarks" type="java.lang.String" *#
-#* @vtlvariable name="mergeUrlTags" type="java.lang.String" *#
-#* @vtlvariable name="socialBookmarksDisplayStyle" type="java.lang.String" *#
+#* @vtlvariable name="classNameIds" type="java.lang.String" *#
 #* @vtlvariable name="classTypeIdsDLFileEntryAssetRendererFactory" type="java.lang.String" *#
-#* @vtlvariable name="anyClassTypeJournalArticleAssetRendererFactory" type="java.lang.String" *#
-#* @vtlvariable name="enableCommentRatings" type="java.lang.String" *#
-#* @vtlvariable name="emailFromAddress" type="java.lang.String" *#
-#* @vtlvariable name="anyClassTypeDLFileEntryAssetRendererFactory" type="java.lang.String" *#
-#* @vtlvariable name="enablePrint" type="java.lang.String" *#
-#* @vtlvariable name="ddmStructureFieldValue" type="java.lang.String" *#
+#* @vtlvariable name="customUserAttributes" type="java.lang.String" *#
 #* @vtlvariable name="ddmStructureDisplayFieldValue" type="java.lang.String" *#
-#* @vtlvariable name="currentURL" type="java.lang.String" *#
+#* @vtlvariable name="ddmStructureFieldName" type="java.lang.String" *#
+#* @vtlvariable name="ddmStructureFieldValue" type="java.lang.String" *#
+#* @vtlvariable name="delta" type="java.lang.String" *#
+#* @vtlvariable name="displayStyle" type="java.lang.String" *#
+#* @vtlvariable name="displayStyleGroupId" type="java.lang.String" *#
+#* @vtlvariable name="emailAssetEntryAddedEnabled" type="java.lang.String" *#
+#* @vtlvariable name="emailFromAddress" type="java.lang.String" *#
+#* @vtlvariable name="emailFromName" type="java.lang.String" *#
+#* @vtlvariable name="enableCommentRatings" type="java.lang.String" *#
+#* @vtlvariable name="enableComments" type="java.lang.String" *#
+#* @vtlvariable name="enableFlags" type="java.lang.String" *#
+#* @vtlvariable name="enablePermissions" type="java.lang.String" *#
+#* @vtlvariable name="enablePrint" type="java.lang.String" *#
+#* @vtlvariable name="enableRatings" type="java.lang.String" *#
+#* @vtlvariable name="enableRelatedAssets" type="java.lang.String" *#
+#* @vtlvariable name="enableRss" type="java.lang.String" *#
+#* @vtlvariable name="enableSocialBookmarks" type="java.lang.String" *#
+#* @vtlvariable name="enableTagBasedNavigation" type="java.lang.String" *#
+#* @vtlvariable name="enableViewCountIncrement" type="java.lang.String" *#
+#* @vtlvariable name="entries" type="java.util.List<com.liferay.asset.kernel.model.AssetEntry>" *#
+#* @vtlvariable name="entry" type="com.liferay.asset.kernel.model.AssetEntry" *#
+#* @vtlvariable name="mergeUrlTags" type="java.lang.String" *#
+#* @vtlvariable name="metadataFields" type="java.lang.String" *#
+#* @vtlvariable name="orderByColumn1" type="java.lang.String" *#
+#* @vtlvariable name="orderByColumn2" type="java.lang.String" *#
+#* @vtlvariable name="orderByType1" type="java.lang.String" *#
+#* @vtlvariable name="orderByType2" type="java.lang.String" *#
+#* @vtlvariable name="paginationType" type="java.lang.String" *#
+#* @vtlvariable name="queryAndOperator0" type="java.lang.String" *#
+#* @vtlvariable name="queryContains0" type="java.lang.String" *#
+#* @vtlvariable name="queryName0" type="java.lang.String" *#
+#* @vtlvariable name="rssDelta" type="java.lang.String" *#
+#* @vtlvariable name="rssDisplayStyle" type="java.lang.String" *#
+#* @vtlvariable name="rssFeedType" type="java.lang.String" *#
+#* @vtlvariable name="rssName" type="java.lang.String" *#
+#* @vtlvariable name="selectionStyle" type="java.lang.String" *#
+#* @vtlvariable name="showAddContentButton" type="java.lang.String" *#
+#* @vtlvariable name="showAssetTitle" type="java.lang.String" *#
+#* @vtlvariable name="showAvailableLocales" type="java.lang.String" *#
+#* @vtlvariable name="showContextLink" type="java.lang.String" *#
+#* @vtlvariable name="showExtraInfo" type="java.lang.String" *#
+#* @vtlvariable name="showMetadataDescriptions" type="java.lang.String" *#
+#* @vtlvariable name="showOnlyLayoutAssets" type="java.lang.String" *#
+#* @vtlvariable name="showQueryLogic" type="java.lang.String" *#
+#* @vtlvariable name="socialBookmarksDisplayPosition" type="java.lang.String" *#
+#* @vtlvariable name="socialBookmarksDisplayStyle" type="java.lang.String" *#
+#* @vtlvariable name="subtypeFieldsFilterEnabled" type="java.lang.String" *#
+#* @vtlvariable name="subtypeFieldsFilterEnabledJournalArticleAssetRendererFactory" type="java.lang.String" *#
+#* @vtlvariable name="subtypeFieldsFilterEnabledDLFileEntryAssetRendererFactory" type="java.lang.String" *#
+#* @vtlvariable name="template_id" type="java.lang.Long" *#
