--- a/src/main/resources/com/liferay/vtl/journal_template_70.vm
+++ b/src/main/resources/com/liferay/vtl/journal_template_70.vm
@@ -1,1 +1,2 @@
 #* @vtlvariable name="journalContent" type="com.liferay.journal.util.JournalContent" *#
+#* @vtlvariable name="journalContentUtil" type="com.liferay.journal.util.JournalContent" *#
