--- a/src/main/resources/com/liferay/vtl/velocity_context_61.vm
+++ b/src/main/resources/com/liferay/vtl/velocity_context_61.vm
@@ -1,62 +1,55 @@
+#* @vtlvariable name="accountPermission" type="com.liferay.portal.service.permission.AccountPermission" *#
 #* @vtlvariable name="arrayUtil" type="com.liferay.portal.kernel.util.ArrayUtil_IW" *#
 #* @vtlvariable name="auditMessageFactoryUtil" type="com.liferay.portal.kernel.audit.AuditMessageFactory" *#
 #* @vtlvariable name="auditRouterUtil" type="com.liferay.portal.kernel.audit.AuditRouter" *#
 #* @vtlvariable name="browserSniffer" type="com.liferay.portal.kernel.servlet.BrowserSniffer" *#
+#* @vtlvariable name="company" type="com.liferay.portal.model.Company" *#
 #* @vtlvariable name="dateFormatFactory" type="com.liferay.portal.kernel.util.FastDateFormatFactory" *#
-#* @vtlvariable name="dateTool" type="org.apache.velocity.tools.generic.DateTool" *#
+#* @vtlvariable name="dateFormats" type="com.liferay.portal.kernel.util.FastDateFormatFactory" *#
 #* @vtlvariable name="dateUtil" type="com.liferay.portal.kernel.util.DateUtil_IW" *#
-#* @vtlvariable name="escapeTool" type="org.apache.velocity.tools.generic.EscapeTool" *#
 #* @vtlvariable name="expandoColumnLocalService" type="com.liferay.portlet.expando.service.ExpandoColumnLocalService" *#
 #* @vtlvariable name="expandoRowLocalService" type="com.liferay.portlet.expando.service.ExpandoRowLocalService" *#
 #* @vtlvariable name="expandoTableLocalService" type="com.liferay.portlet.expando.service.ExpandoTableLocalService" *#
 #* @vtlvariable name="expandoValueLocalService" type="com.liferay.portlet.expando.service.ExpandoValueLocalService" *#
+#* @vtlvariable name="fullCssPath" type="java.lang.String" *#
+#* @vtlvariable name="fullTemplatesPath" type="java.lang.String" *#
 #* @vtlvariable name="getterUtil" type="com.liferay.portal.kernel.util.GetterUtil_IW" *#
+#* @vtlvariable name="groupPermission" type="com.liferay.portal.service.permission.GroupPermission" *#
 #* @vtlvariable name="htmlUtil" type="com.liferay.portal.kernel.util.Html" *#
 #* @vtlvariable name="httpUtil" type="com.liferay.portal.kernel.util.Http" *#
-#* @vtlvariable name="iteratorTool" type="org.apache.velocity.tools.generic.IteratorTool" *#
+#* @vtlvariable name="imageToken" type="com.liferay.portal.webserver.WebServerServletToken" *#
 #* @vtlvariable name="journalContentUtil" type="com.liferay.portlet.journalcontent.util.JournalContent" *#
 #* @vtlvariable name="jsonFactoryUtil" type="com.liferay.portal.kernel.json.JSONFactory" *#
 #* @vtlvariable name="languageUtil" type="com.liferay.portal.kernel.language.Language" *#
-#* @vtlvariable name="unicodeLanguageUtil" type="com.liferay.portal.kernel.language.UnicodeLanguage" *#
-#* @vtlvariable name="listTool" type="org.apache.velocity.tools.generic.ListTool" *#
+#* @vtlvariable name="layoutPermission" type="com.liferay.portal.service.permission.LayoutPermission" *#
+#* @vtlvariable name="locale" type="java.util.Locale" *#
 #* @vtlvariable name="localeUtil" type="com.liferay.portal.kernel.util.LocaleUtil" *#
-#* @vtlvariable name="mathTool" type="org.apache.velocity.tools.generic.MathTool" *#
-#* @vtlvariable name="numberTool" type="org.apache.velocity.tools.generic.NumberTool" *#
+#* @vtlvariable name="locationPermission" type="com.liferay.portal.service.permission.OrganizationPermission" *#
+#* @vtlvariable name="organizationPermission" type="com.liferay.portal.service.permission.OrganizationPermission" *#
 #* @vtlvariable name="paramUtil" type="com.liferay.portal.kernel.util.ParamUtil_IW" *#
-#* @vtlvariable name="portalUtil" type="com.liferay.portal.util.Portal" *#
+#* @vtlvariable name="passwordPolicyPermission" type="com.liferay.portal.service.permission.PasswordPolicyPermission" *#
+#* @vtlvariable name="permissionChecker" type="com.liferay.portal.security.permission.PermissionChecker" *#
 #* @vtlvariable name="portal" type="com.liferay.portal.util.Portal" *#
+#* @vtlvariable name="portalPermission" type="com.liferay.portal.service.permission.PortalPermission" *#
+#* @vtlvariable name="portalUtil" type="com.liferay.portal.util.Portal" *#
+#* @vtlvariable name="portletPermission" type="com.liferay.portal.service.permission.PortletPermission" *#
+#* @vtlvariable name="portletURLFactory" type="com.liferay.portlet.PortletURLFactory" *#
 #* @vtlvariable name="prefsPropsUtil" type="com.liferay.portal.kernel.util.PrefsProps" *#
 #* @vtlvariable name="propsUtil" type="com.liferay.portal.kernel.util.Props" *#
-#* @vtlvariable name="portletURLFactory" type="com.liferay.portlet.PortletURLFactory" *#
 #* @vtlvariable name="randomizer" type="com.liferay.portal.kernel.util.Randomizer" *#
+#* @vtlvariable name="rolePermission" type="com.liferay.portal.service.permission.RolePermission" *#
 #* @vtlvariable name="saxReaderUtil" type="com.liferay.portal.kernel.xml.SAXReader" *#
+#* @vtlvariable name="scopeGroupId" type="java.lang.Long" *#
+#* @vtlvariable name="serviceLocator" type="com.liferay.portal.velocity.ServiceLocator" *#
 #* @vtlvariable name="sessionClicks" type="com.liferay.portal.util.SessionClicks_IW" *#
-#* @vtlvariable name="sortTool" type="org.apache.velocity.tools.generic.SortTool" *#
+#* @vtlvariable name="siteGroupId" type="java.lang.Long" *#
 #* @vtlvariable name="staticFieldGetter" type="com.liferay.portal.kernel.util.StaticFieldGetter" *#
 #* @vtlvariable name="stringUtil" type="com.liferay.portal.kernel.util.StringUtil_IW" *#
 #* @vtlvariable name="timeZoneUtil" type="com.liferay.portal.kernel.util.TimeZoneUtil_IW" *#
 #* @vtlvariable name="unicodeFormatter" type="com.liferay.portal.kernel.util.UnicodeFormatter_IW" *#
-#* @vtlvariable name="validator" type="com.liferay.portal.kernel.util.Validator_IW" *#
-#* @vtlvariable name="velocityTaglib_layoutIcon" type="java.lang.reflect.Method" *#
-#* @vtlvariable name="webServerToken" type="com.liferay.portal.webserver.WebServerServletToken" *#
-#* @vtlvariable name="accountPermission" type="com.liferay.portal.service.permission.AccountPermission" *#
-#* @vtlvariable name="commonPermission" type="com.liferay.portal.service.permission.CommonPermission" *#
-#* @vtlvariable name="groupPermission" type="com.liferay.portal.service.permission.GroupPermission" *#
-#* @vtlvariable name="layoutPermission" type="com.liferay.portal.service.permission.LayoutPermission" *#
-#* @vtlvariable name="organizationPermission" type="com.liferay.portal.service.permission.OrganizationPermission" *#
-#* @vtlvariable name="passwordPolicyPermission" type="com.liferay.portal.service.permission.PasswordPolicyPermission" *#
-#* @vtlvariable name="portalPermission" type="com.liferay.portal.service.permission.PortalPermission" *#
-#* @vtlvariable name="portletPermission" type="com.liferay.portal.service.permission.PortletPermission" *#
-#* @vtlvariable name="rolePermission" type="com.liferay.portal.service.permission.RolePermission" *#
+#* @vtlvariable name="unicodeLanguageUtil" type="com.liferay.portal.kernel.language.UnicodeLanguage" *#
 #* @vtlvariable name="userGroupPermission" type="com.liferay.portal.service.permission.UserGroupPermission" *#
 #* @vtlvariable name="userPermission" type="com.liferay.portal.service.permission.UserPermission" *#
-#* @vtlvariable name="dateFormats" type="com.liferay.portal.kernel.util.FastDateFormatFactory" *#
-#* @vtlvariable name="imageToken" type="com.liferay.portal.webserver.WebServerServletToken" *#
-#* @vtlvariable name="locationPermission" type="com.liferay.portal.service.permission.OrganizationPermission" *#
-#* @vtlvariable name="serviceLocator" type="com.liferay.portal.velocity.ServiceLocator" *#
-#* @vtlvariable name="velocityPortletPreferences" type="com.liferay.portal.velocity.VelocityPortletPreferences" *#
 #* @vtlvariable name="utilLocator" type="com.liferay.portal.velocity.UtilLocator" *#
-#* @vtlvariable name="scopeGroupId" type="java.lang.Long" *#
-#* @vtlvariable name="locale" type="java.util.Locale" *#
-#* @vtlvariable name="permissionChecker" type="com.liferay.portal.security.permission.PermissionChecker" *#
-#* @vtlvariable name="company" type="com.liferay.portal.model.Company" *#
+#* @vtlvariable name="validator" type="com.liferay.portal.kernel.util.Validator_IW" *#
+#* @vtlvariable name="webServerToken" type="com.liferay.portal.webserver.WebServerServletToken" *#
