--- a/src/main/resources/com/liferay/vtl/journal_template.vm
+++ b/src/main/resources/com/liferay/vtl/journal_template.vm
@@ -1,20 +1,20 @@
+#* @vtlvariable name="articleGroupId" type="java.lang.Long" *#
+#* @vtlvariable name="journalTemplatesPath " type="java.lang.String" *#
+#* @vtlvariable name="request" type="java.util.Map" *#
+#* @vtlvariable name="reserved-article-asset-tag-names" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-author-comments" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-author-email-address" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-author-id" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-author-job-title" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-author-name" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-create-date" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-description" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-display-date" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
 #* @vtlvariable name="reserved-article-id" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-version" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-modified-date" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
+#* @vtlvariable name="reserved-article-small-image-url" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
 #* @vtlvariable name="reserved-article-title" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
 #* @vtlvariable name="reserved-article-url-title" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-description" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-type" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-create-date" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-modified-date" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-display-date" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-small-image-url" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-asset-tag-names" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-author-id" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-author-name" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-author-email-address" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-author-comments" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="reserved-article-author-job-title" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
-#* @vtlvariable name="request" type="java.util.Map" *#
-#* @vtlvariable name="articleGroupId" type="java.lang.Long" *#
+#* @vtlvariable name="reserved-article-version" type="com.liferay.portal.kernel.templateparser.TemplateNode" *#
 #* @vtlvariable name="xmlRequest" type="java.lang.String" *#
 
