fixed missing ADT variables

--- a/src/main/resources/com/liferay/vtl/adt_asset_entry_70.vm
+++ b/src/main/resources/com/liferay/vtl/adt_asset_entry_70.vm
@@ -71,3 +71,5 @@
 #* @vtlvariable name="subtypeFieldsFilterEnabledJournalArticleAssetRendererFactory" type="java.lang.String" *#
 #* @vtlvariable name="subtypeFieldsFilterEnabledDLFileEntryAssetRendererFactory" type="java.lang.String" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
+#* @vtlvariable name="currentURL" type="java.lang.String" *#
+#* @vtlvariable name="request" type="javax.servlet.http.HttpServletRequest" *#
