--- a/src/main/resources/com/liferay/vtl/adt_modified_facet_73.vm
+++ b/src/main/resources/com/liferay/vtl/adt_modified_facet_73.vm
@@ -1,5 +1,8 @@
+#* @vtlvariable name="customRangeModifiedFacetTermDisplayContext" type="com.liferay.portal.search.web.internal.modified.facet.display.context.ModifiedFacetTermDisplayContext" *#
+#* @vtlvariable name="modifiedFacetCalendarDisplayContext" type="com.liferay.portal.search.web.internal.modified.facet.display.context.ModifiedFacetCalendarDisplayContext" *#
 #* @vtlvariable name="modifiedFacetDisplayContext" type="com.liferay.portal.search.web.internal.modified.facet.display.context.ModifiedFacetDisplayContext" *#
 #* @vtlvariable name="entries" type="java.util.List<com.liferay.portal.search.web.internal.modified.facet.display.context.ModifiedFacetTermDisplayContext>" *#
 #* @vtlvariable name="template_id" type="java.lang.Long" *#
 #* @vtlvariable name="currentURL" type="java.lang.String" *#
+#* @vtlvariable name="ranges" type="java.lang.String" *#
 #* @vtlvariable name="request" type="javax.servlet.http.HttpServletRequest" *#
